--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1
+
 jobs:
   build:
     docker:
@@ -19,13 +20,15 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run: npm run audit
+      - run: npm audit
+
 workflows:
   my_workflow:
-    - build
-    - test:
-      requires:
-        - build
-    - analyze:
-        requires:
-          - test
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - analyze:
+          requires:
+            - test
